[package]
name = "snow-plow"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Jean CASPAR"]
description = "Snow Plow is an utility which allows to update several flakes with one command, in order to improve sharing of dependencies on your computer."
readme = "README.md"
repository = "https://github.com/JeanCASPAR/snow-plow"
keywords = ["nix", "flake", "nixos"]
categories = ["command-line-utilities", "config"]
exclude = [
    "flake.*",
    ".envrc",
]

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.13", features = ["derive", "env"] }
clap_complete = "4.5.20"
clap_mangen = "0.2.23"
csv = "1.3.0"
directories = "5.0.1"
serde = { version = "1.0.204", features = ["derive"] }
